--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="products.js"></script>
     <script src="materials.js"></script>
-    <script defer src="craftparse-norm.js"></script>
+    <script defer src="craftparse.js"></script>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KDS4M7C1F"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
