--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<div class="leveltmp1">
 				<div class="templateAmountWrap">
 					<label for="templateAmount1">level 1</label>
-					<input type="number" id="templateAmount1" placeholder="120">
+					<input type="number" id="templateAmount1" placeholder="120" min="0">
 				</div>
 				<select name="temp1" id="temp1" class="temps">
 					<option value="poor">Poor</option>
@@ -74,7 +74,7 @@
 			<div class="leveltmp5">
 				<div class="templateAmountWrap">
 					<label for="templateAmount5">level 5</label>
-					<input type="number" id="templateAmount5" placeholder="120">
+					<input type="number" id="templateAmount5" placeholder="120" min="0">
 				</div>
 				<select name="temp5" id="temp5" class="temps">
 					<option value="poor">Poor</option>
@@ -88,7 +88,7 @@
 			<div class="leveltmp10">
 				<div class="templateAmountWrap">
 					<label for="templateAmount10">level 10</label>
-					<input type="number" id="templateAmount10" placeholder="120">
+					<input type="number" id="templateAmount10" placeholder="120" min="0">
 				</div>
 				<select name="temp10" id="temp10" class="temps">
 					<option value="poor">Poor</option>
@@ -102,7 +102,7 @@
 			<div class="leveltmp15">
 				<div class="templateAmountWrap">
 					<label for="templateAmount15">level 15</label>
-					<input type="number" id="templateAmount15" placeholder="120">
+					<input type="number" id="templateAmount15" placeholder="120" min="0">
 				</div>
 				<select name="temp15" id="temp15" class="temps">
 					<option value="poor">Poor</option>
@@ -116,7 +116,7 @@
 			<div class="leveltmp20">
 				<div class="templateAmountWrap">
 					<label for="templateAmount20">level 20</label>
-					<input type="number" id="templateAmount20" placeholder="120">
+					<input type="number" id="templateAmount20" placeholder="120" min="0">
 				</div>
 				<select name="temp20" id="temp20" class="temps">
 					<option value="poor">Poor</option>
@@ -130,7 +130,7 @@
 			<div class="leveltmp25">
 				<div class="templateAmountWrap">
 					<label for="templateAmount25">level 25</label>
-					<input type="number" id="templateAmount25" placeholder="120">
+					<input type="number" id="templateAmount25" placeholder="120" min="0">
 				</div>
 				<select name="temp25" id="temp25" class="temps">
 					<option value="poor">Poor</option>
