--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@
 			
 			<div class="warlord-toggle"><input type="checkbox" id="includeWarlords" checked><label for="includeWarlords">Include CTW items</label></div>
 			<div class="warlord-toggle"><input type="checkbox" id="level1OnlyWarlords"><label for="level1OnlyWarlords">Use only CTW items for Level 1</label></div>
+			<p id="toggleAdvMaterials" class="adv-toggle">Also use gear materials</p>
+			<div id="advMaterials" class="materials-list" style="display:none;"></div>
 			<button id="calculateWithPreferences">Calculate</button>
 		</div>
         <div id="results" style="display: none;"></div>
