--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<meta property="og:site_name" content="Crafting calculator">
 	<link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
+	<script src="seasons/season0.js"></script>
+    <script src="seasons/season10.js"></script>
     <script src="products.js"></script>
     <script src="materials.js"></script>
     <script defer src="craftparse.js"></script>
