--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="style.css">
 	<script src="seasons/season0.js"></script>
     <script src="seasons/season10.js"></script>
+	<script src="seasons/season12.js"></script>
     <script src="products.js"></script>
     <script src="materials.js"></script>
     <script defer src="craftparse.js"></script>
