--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script src="seasons/season12.js"></script>
     <script src="products.js"></script>
     <script src="materials.js"></script>
-    <script defer src="craftparse.js"></script>
+    <script defer src="craftparse.js?v=1.111"></script>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KDS4M7C1F"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
