--- a/index.html
+++ b/index.html
@@ -146,13 +146,13 @@
 				</select>
 			</div>
 			
-                        <div class="section-title"><div class="checkbox-header"><span>Ceremonial Targ items</span><button id="ctwInfoBtn" class="info-btn" aria-label="CTW info">
+                        <div class="section-title"><div class="checkbox-header"><span>Ceremonial Targaryen Warlord</span><button id="ctwInfoBtn" class="info-btn" aria-label="CTW info">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336c-13.3 0-24 10.7-24 24s10.7 24 24 24l80 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-8 0 0-88c0-13.3-10.7-24-24-24l-48 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l24 0 0 64-24 0zm40-144a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"/></svg>
                         </button></div></div>
                         <div id="ctwInfoPopup" class="info-overlay"><div class="info-content"><button class="close-popup" aria-label="Close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
 					<path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"></path>
 				</svg></button><p><b>Only for Level 1</b>: Level 1 templates will exclusively use Ceremonial Targ items. This is more material-efficient as these items are cheaper to produce.<br><br>
-			<b>Use when needed</b>: Ceremonial Targ items can be used at any level when material constraints make it beneficial. This does not force their use, but allows it as needed.</p></div></div>
+			<b>Use when needed</b>: Ceremonial Targaryen Warlord items can be used at any level when material constraints make it beneficial. This does not force their use, but allows it as needed.</p></div></div>
                         <div class="warlord-toggle checkbox-wrapper-30">
                             <span class="checkbox">
                                 <input type="checkbox" id="level1OnlyWarlords" checked>
@@ -172,7 +172,7 @@
                         </button></div></div>
                         <div id="oddsInfoPopup" class="info-overlay"><div class="info-content"><button class="close-popup" aria-label="Close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
 					<path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"></path>
-				</svg></button><p>When unchecked, low or medium odds items from season 0 and CTW are skipped. Normal odds items are always included.</p></div></div>
+				</svg></button><p><b>Odds</b>: There are three tiers. The normal level is always included by default. You can choose to include the lower levels based on your preferences. Odds affect the Season 0 and Ceremonial Targaryen Warlord items, and only apply at levels 15, 20, and 25.</p></div></div>
                         <div class="warlord-toggle checkbox-wrapper-30">
                             <span class="checkbox">
                                 <input type="checkbox" id="includeLowOdds">
