--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css?v=1.115">
 	<script src="seasons/season0.js"></script>
+	<script src="seasons/season9.js"></script>
 	<script src="seasons/season10.js"></script>
 	<script src="seasons/season11.js"></script>
 	<script src="seasons/season12.js"></script>
