--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			
 
 			<!-- Generoitavien itemien määrä -->
-			<div class="text"><p>Enter number of templates</p></div>
+                        <div class="section-title"><div class="checkbox-header"><span>Enter number of templates</span></div></div>
 			<div class="leveltmp1">
 				<div class="templateAmountWrap">
 					<label for="templateAmount1">level 1</label>
