--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<script src="seasons/season0.js"></script>
 	<script src="seasons/season1.js"></script>
 	<script src="seasons/season2.js"></script>
+	<script src="seasons/season4.js"></script>
+	<script src="seasons/season5.js"></script>
 	<script src="seasons/season6.js"></script>
 	<script src="seasons/season7.js"></script>
 	<script src="seasons/season8.js"></script>
