--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="products.js"></script>
     <script src="materials.js"></script>
     <script defer src="craftparse.js?v=1.111"></script>
+    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KDS4M7C1F"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
@@ -78,8 +79,11 @@
 			</div>
 			
 
-			<!-- Generoitavien itemien määrä -->
-                        <div class="section-title"><div class="checkbox-header"><span>Enter number of templates</span></div></div>
+                        <!-- Generoitavien itemien määrä -->
+                        <div class="section-title"><div class="checkbox-header"><span>Enter number of templates</span><button id="templatesInfoBtn" class="info-btn" aria-label="Template info">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336c-13.3 0-24 10.7-24 24s10.7 24 24 24l80 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-8 0 0-88c0-13.3-10.7-24-24-24l-48 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l24 0 0 64-24 0zm40-144a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"/></svg>
+                                </button></div></div>
+                        <div id="templatesInfoPopup" class="info-overlay"><div class="info-content"><button class="close-popup" aria-label="Close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"/></svg></button><p>Define the desired number of templates for each level. Use the dropdown on the same line to choose the material quality for that template.</p></div></div>
 			<div class="leveltmp1">
 				<div class="templateAmountWrap">
 					<label for="templateAmount1">level 1</label>
