--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	<script src="seasons/season12.js"></script>
     <script src="products.js"></script>
     <script src="materials.js"></script>
+    <script src="domtoimage.js"></script>
     <script defer src="craftparse.js?v=1.111"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.9.0/dist/dom-to-image-more.min.js"></script>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KDS4M7C1F"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
