Define extra level amounts per season

--- a/index.html
+++ b/index.html
@@ -153,20 +153,76 @@
 					<option value="legendary">Legendary</option>
 				</select>
 			</div>
-			<div class="leveltmp25">
-				<div class="templateAmountWrap">
-					<label for="templateAmount25">level 25</label>
-					<input type="number" id="templateAmount25" placeholder="120" min="0">
-				</div>
-				<select name="temp25" id="temp25" class="temps">
-					<option value="poor">Poor</option>
-					<option value="common">Common</option>
-					<option value="fine">Fine</option>
-					<option value="exquisite" selected>Exquisite</option>
-					<option value="epic">Epic</option>
-					<option value="legendary">Legendary</option>
-				</select>
-			</div>
+                        <div class="leveltmp25">
+                                <div class="templateAmountWrap">
+                                        <label for="templateAmount25">level 25</label>
+                                        <input type="number" id="templateAmount25" placeholder="120" min="0">
+                                </div>
+                                <select name="temp25" id="temp25" class="temps">
+                                        <option value="poor">Poor</option>
+                                        <option value="common">Common</option>
+                                        <option value="fine">Fine</option>
+                                        <option value="exquisite" selected>Exquisite</option>
+                                        <option value="epic">Epic</option>
+                                        <option value="legendary">Legendary</option>
+                                </select>
+                        </div>
+                        <div class="leveltmp30">
+                                <div class="templateAmountWrap">
+                                        <label for="templateAmount30">level 30</label>
+                                        <input type="number" id="templateAmount30" placeholder="120" min="0">
+                                </div>
+                                <select name="temp30" id="temp30" class="temps">
+                                        <option value="poor">Poor</option>
+                                        <option value="common">Common</option>
+                                        <option value="fine">Fine</option>
+                                        <option value="exquisite" selected>Exquisite</option>
+                                        <option value="epic">Epic</option>
+                                        <option value="legendary">Legendary</option>
+                                </select>
+                        </div>
+                        <div class="leveltmp35">
+                                <div class="templateAmountWrap">
+                                        <label for="templateAmount35">level 35</label>
+                                        <input type="number" id="templateAmount35" placeholder="120" min="0">
+                                </div>
+                                <select name="temp35" id="temp35" class="temps">
+                                        <option value="poor">Poor</option>
+                                        <option value="common">Common</option>
+                                        <option value="fine" selected>Fine</option>
+                                        <option value="exquisite">Exquisite</option>
+                                        <option value="epic">Epic</option>
+                                        <option value="legendary">Legendary</option>
+                                </select>
+                        </div>
+                        <div class="leveltmp40">
+                                <div class="templateAmountWrap">
+                                        <label for="templateAmount40">level 40</label>
+                                        <input type="number" id="templateAmount40" placeholder="120" min="0">
+                                </div>
+                                <select name="temp40" id="temp40" class="temps">
+                                        <option value="poor">Poor</option>
+                                        <option value="common">Common</option>
+                                        <option value="fine" selected>Fine</option>
+                                        <option value="exquisite">Exquisite</option>
+                                        <option value="epic">Epic</option>
+                                        <option value="legendary">Legendary</option>
+                                </select>
+                        </div>
+                        <div class="leveltmp45">
+                                <div class="templateAmountWrap">
+                                        <label for="templateAmount45">level 45</label>
+                                        <input type="number" id="templateAmount45" placeholder="120" min="0">
+                                </div>
+                                <select name="temp45" id="temp45" class="temps">
+                                        <option value="poor">Poor</option>
+                                        <option value="common" selected>Common</option>
+                                        <option value="fine">Fine</option>
+                                        <option value="exquisite">Exquisite</option>
+                                        <option value="epic">Epic</option>
+                                        <option value="legendary">Legendary</option>
+                                </select>
+                        </div>
 			
                         <div class="section-title"><div class="checkbox-header"><span>Ceremonial Targaryen Warlord</span><button id="ctwInfoBtn" class="info-btn" aria-label="CTW info">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336c-13.3 0-24 10.7-24 24s10.7 24 24 24l80 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-8 0 0-88c0-13.3-10.7-24-24-24l-48 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l24 0 0 64-24 0zm40-144a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"/></svg>
