--- a/index.html
+++ b/index.html
@@ -227,15 +227,23 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336c-13.3 0-24 10.7-24 24s10.7 24 24 24l80 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-8 0 0-88c0-13.3-10.7-24-24-24l-48 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l24 0 0 64-24 0zm40-144a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"/></svg>
                         </button></div></div>
                         <div id="ctwInfoPopup" class="info-overlay"><div class="info-content"><button class="close-popup" aria-label="Close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
-					<path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"></path>
-				</svg></button><p><b>Only for Level 1</b>: Level 1 templates will exclusively use Ceremonial Targ items. This is more material-efficient as these items are cheaper to produce.<br><br>
-			<b>Use when needed</b>: Ceremonial Targaryen Warlord items can be used at any level when material constraints make it beneficial. This does not force their use, but allows it as needed.</p></div></div>
+                                        <path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"></path>
+                                </svg></button><p><b>Only for Level 1</b>: Level 1 templates will exclusively use Ceremonial Targaryen Warlord items. This is more material-efficient as these items are cheaper to produce.<br><br>
+                        <b>Only for Level 20</b>: Level 20 templates will exclusively use Ceremonial Targaryen Warlord items, ensuring the CTW set is crafted even when other warlord options are unavailable.<br><br>
+                        <b>Use when needed</b>: Ceremonial Targaryen Warlord items can be used at any level when material constraints make it beneficial. This does not force their use, but allows it as needed.</p></div></div>
                         <div class="warlord-toggle checkbox-wrapper-30">
                             <span class="checkbox">
                                 <input type="checkbox" id="level1OnlyWarlords" checked>
                                 <svg><use xlink:href="#checkbox-30"></use></svg>
                             </span>
                             <label for="level1OnlyWarlords">Only for Level 1</label>
+                        </div>
+                        <div class="warlord-toggle checkbox-wrapper-30">
+                            <span class="checkbox">
+                                <input type="checkbox" id="level20OnlyWarlords">
+                                <svg><use xlink:href="#checkbox-30"></use></svg>
+                            </span>
+                            <label for="level20OnlyWarlords">Only for Level 20</label>
                         </div>
                         <div class="warlord-toggle checkbox-wrapper-30">
                             <span class="checkbox">
@@ -263,13 +271,6 @@
                                 <svg><use xlink:href="#checkbox-30"></use></svg>
                             </span>
                             <label for="includeMediumOdds">Include medium odds items</label>
-                        </div>
-                        <div class="warlord-toggle checkbox-wrapper-30">
-                            <span class="checkbox">
-                                <input type="checkbox" id="preferSameItems">
-                                <svg><use xlink:href="#checkbox-30"></use></svg>
-                            </span>
-                            <label for="preferSameItems">Favor same items</label>
                         </div>
                         <svg xmlns="http://www.w3.org/2000/svg" style="display:none">
                             <symbol id="checkbox-30" viewBox="0 0 22 22">
