Refine odds handling and UI defaults

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                                 <select name="temp30" id="temp30" class="temps">
                                         <option value="poor">Poor</option>
                                         <option value="common">Common</option>
-                                        <option value="fine">Fine</option>
-                                        <option value="exquisite" selected>Exquisite</option>
+                                        <option value="fine" selected>Fine</option>
+                                        <option value="exquisite">Exquisite</option>
                                         <option value="epic">Epic</option>
                                         <option value="legendary">Legendary</option>
                                 </select>
