--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 				</script>
 			</div>
 		</div>
-		<div class="spinner-wrap"><div class="loading"><div class="spinner"><svg viewBox="25 25 50 50" class="circular"><circle stroke-miterlimit="10" stroke-width="3" fill="none" r="20" cy="50" cx="50" class="path"></circle></svg></div><p>Loading...</p></div></div>
+            <div class="spinner-wrap"><div class="loading"><div class="spinner"><svg viewBox="25 25 50 50" class="circular"><circle stroke-miterlimit="10" stroke-width="3" fill="none" r="20" cy="50" cx="50" class="path"></circle></svg></div><p>Loading...</p><div class="spinner-progress" aria-live="polite"><div class="spinner-progress__track" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"><div class="spinner-progress__bar"></div></div><span class="spinner-progress__label">Preparing templates…</span></div></div></div>
     </div>
         
     <footer>
