--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
                                 </button>
                                 <h2 id="updateLogTitle">What&rsquo;s new</h2>
                                 <div class="changelog-entries">
+										<div class="changelog-entry">
+                                                <button class="changelog-toggle" id="changelog-toggle-2025-10-22" aria-expanded="true" aria-controls="changelog-panel-2025-11-06">
+                                                        <span class="changelog-date">06/11/2025</span>
+                                                        <svg class="changelog-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" aria-hidden="true" focusable="false"><path d="M41.4 150.6c12.5-12.5 32.8-12.5 45.3 0L160 223.9l73.4-73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3z"/></svg>
+                                                </button>
+                                                <div id="changelog-panel-2025-11-06" class="changelog-panel" role="region" aria-labelledby="changelog-toggle-2025-10-22">
+                                                        <ul>
+                                                                <li><strong>Tyrell Fireborn Garb items:</strong> Added the full equipment lineup to planning calculations.</li>
+                                                        </ul>
+                                                </div>
+                                        </div>
                                         <div class="changelog-entry">
                                                 <button class="changelog-toggle" id="changelog-toggle-2025-10-22" aria-expanded="true" aria-controls="changelog-panel-2025-10-22">
                                                         <span class="changelog-date">22/10/2025</span>
@@ -459,3 +470,4 @@
 	</footer>
 </body>
 </html>
+
